[gd_scene load_steps=2 format=3 uid="uid://b8a5xn1xs1muv"]

[ext_resource type="Script" path="res://assets/scripts/Settings.gd" id="1_2ee8n"]

[node name="PopupPanel" type="PopupPanel"]
initial_position = 1
size = Vector2i(608, 334)
visible = true
script = ExtResource("1_2ee8n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 604.0
offset_bottom = 330.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer2" type="GridContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 20
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/GridContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "SFX Level:"
horizontal_alignment = 2

[node name="SfxLabel" type="Label" parent="VBoxContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
text = "100"

[node name="SFX" type="HSlider" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
value = 100.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 20
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Music Level:"
horizontal_alignment = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "100"

[node name="Music" type="HSlider" parent="VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
value = 100.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "KeyBinds"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 50
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Up:"
horizontal_alignment = 2

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "up-arrow"

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Down:"
horizontal_alignment = 2

[node name="Button2" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "down-arrow"

[node name="Label3" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Left:"
horizontal_alignment = 2

[node name="Button3" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "left-arrow"

[node name="Label4" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Right:"
horizontal_alignment = 2

[node name="Button4" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "right-arrow"

[connection signal="value_changed" from="VBoxContainer/VBoxContainer/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer2/Music" to="." method="_on_music_value_changed"]
